# airbornegeo

./: .buildinfo  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .zenodo.json  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  ICECAP_survey.html  Makefile  README.md  along_track_distance.html  along_track_distance.ipynb  change_sampling_frequency.html  changelog.html  citing.html  contributing.html  environment.yml  eotvos_correction.html  equivalent_source_levelling.html  filtering_data_in_1D.html  genindex.html  index.html  install.html  levelling.html  levelling_AGAP_gravity.html  levelling_AGAP_gravity.ipynb  levelling_AGAP_magnetics.html  levelling_gravity.html  levelling_to_a_grid.html  normal_gravity_correction.html  noxfile.py  objects.inv  overview.html  potential_field_processing.html  processing.html  processing_AGAP_gravity.html  py-modindex.html  pyproject.toml  quality_control.html  (+6 more)
.doctrees/: ICECAP_survey.doctree  along_track_distance.doctree  change_sampling_frequency.doctree  changelog.doctree  citing.doctree  contributing.doctree  eotvos_correction.doctree  equivalent_source_levelling.doctree  filtering_data_in_1D.doctree  index.doctree  install.doctree  levelling.doctree  levelling_AGAP_gravity.doctree  levelling_AGAP_magnetics.doctree  levelling_gravity.doctree  levelling_to_a_grid.doctree  normal_gravity_correction.doctree  overview.doctree  potential_field_processing.doctree  processing.doctree  processing_AGAP_gravity.doctree  quality_control.doctree  reproject_data.doctree  using_equivalent_sources_for_cross_over_errors.doctree  vertical_acceleration_correction.doctree
.doctrees/api/: airbornegeo.doctree
.doctrees/nbsphinx/: levelling_gravity.ipynb  levelling_to_a_grid.ipynb
.github/: CONTRIBUTING.md  config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  release_checklist.md
.github/workflows/: ci.yml  docs_preview.yml  documentation.yml
_modules/: index.html
_modules/airbornegeo/: block_reduce.html  filtering.html  levelling.html  nav.html  plotting.html  potential_fields.html  processing.html  reproject.html  utils.html
_sources/: ICECAP_survey.ipynb  change_sampling_frequency.ipynb  eotvos_correction.ipynb  filtering_data_in_1D.ipynb  index.md  overview.md  quality_control.md  reproject_data.ipynb
_static/: documentation_options.js
api/: airbornegeo.html
docs/: AGAP_magnetic_survey.ipynb  citing.md  conf.py  equivalent_source_levelling.ipynb  index.md  initial_processing.md  install.md  levelling.md  levelling_AGAP_magnetics.ipynb  normal_gravity_correction.ipynb  overview.md  potential_field_processing.md  processing.md  processing_AGAP_gravity.ipynb  quickstart.ipynb  vertical_acceleration_correction.ipynb
docs/api/: airbornegeo.rst
docs/examples/: index.md  processing_AGAP_gravity.ipynb  processing_AGAP_magnetics.ipynb
docs/tutorials/: along_track_distance.ipynb  index.md  levelling_gravity_data.ipynb
src/airbornegeo/: __init__.py  _filtering.py  _levelling.py  block_reduce.py  distances.py  fetch.py  filtering.py  interpolating.py  levelling.py  nav.py  plotting.py  potential_fields.py  processing.py  reproject.py  resample.py  utils.py
tests/: test_levelling.py  test_package.py
