[build-system]
requires = ["hatchling>=1.26", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "airbornegeo"
authors = [
  { name = "Matt Tankersley", email = "matt.d.tankersley@gmail.com" },
]
description = "Tools for processing airborne geophysical survey data"
keywords = ["airborne", "geophysics", "data", "processing", "gravity", "magnetics"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
# list your package's dependencies below
# follow SPEC0 for specifying minimum dependency versions for main packages: https://scientific-python.org/specs/spec-0000/
# uncomment below packages if you need them
dependencies = [
  "numpy>=2.0.0",
  "scipy>=1.13.0",
  "matplotlib>=3.9.0",
  "pandas>=2.3.0",
  "scikit-learn>=1.5.0",
  "ipython>=8.23.0",
  "harmonica",
  "geopandas",
  "pygmt",
  "shapely",
  "tqdm",
  "verde",
  "ipykernel",
  "nbformat",
  "plotly",
  "seaborn",
  "scooby",
]

[dependency-groups]
test = [
  "pytest >=6",
  "pytest-cov >=3",
]
dev = [
  { include-group = "test" },
  "jupyterlab",
]
docs = [
  "sphinx>=7.0",
  "myst_parser>=0.13",
  "sphinx_copybutton",
  "sphinx_autodoc_typehints",
  "sphinx-book-theme>=0.3",
  "nbsphinx",
  "ipykernel",
  "nbconvert",
  "sphinxcontrib-bibtex",
  "sphinx_design",
  "polartoolkit>=1.5",
  "invert4geom",
]
all = [
  {include-group = "test"},
  {include-group = "dev"},
  {include-group = "docs"},
]

[project.urls]
Homepage = "https://github.com/mdtanker/airbornegeo"
Documentation = "https://mdtanker.github.io/airbornegeo/"
"Bug Tracker" = "https://github.com/mdtanker/airbornegeo/issues"
Discussions = "https://github.com/mdtanker/airbornegeo/discussions"
Changelog = "https://github.com/mdtanker/airbornegeo/docs/changelog.md"


[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/airbornegeo/_version.py"

[tool.hatch.envs.default]
# duplicate for now since hatch doesn't support groups yet
dependencies = []
scripts.test = "pytest {args}"

[tool.hatch.build.targets.sdist]
only-include = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
  "ignore::SyntaxWarning",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]


[tool.coverage]
run.source = ["airbornegeo"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.12"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "airbornegeo.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true


[tool.ruff]

[tool.ruff.lint]
extend-select = [
  "ARG",      # flake8-unused-arguments
  "B",        # flake8-bugbear
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "EXE",      # flake8-executable
  "G",        # flake8-logging-format
  "I",        # isort
  "ICN",      # flake8-import-conventions
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
]
# Uncomment if using a _compat.typing backport
# typing-modules = ["airbornegeo._compat.typing"]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # disable unused-imports errors on __init__.py
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]
"*.ipynb" = ["T201"]


[tool.pylint]
py-version = "3.12"
ignore-paths = ["CHANGELOG.md", ".*\\_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
similarities.min-similarity-lines = 5
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
  "cyclic-import",
]

[tool.codespell]
ignore-words-list = ["words-to-ignore"]
