[build-system]
requires = ["hatchling>=1.26", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "airbornegeo"
authors = [
  { name = "Matt Tankersley", email = "matt.d.tankersley@gmail.com" },
]
description = "Tools for processing airborne geophysical survey data"
keywords = ["airborne", "geophysics", "data", "processing", "gravity", "magnetics"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
# list your package's dependencies below
# follow SPEC0 for specifying minimum dependency versions for main packages: https://scientific-python.org/specs/spec-0000/
# uncomment below packages if you need them
dependencies = [
  "numpy>=2.0.0",
  "scipy>=1.13.0",
  "matplotlib>=3.9.0",
  "pandas>=2.3.0",
  "scikit-learn>=1.5.0",
  "ipython>=8.23.0",
  "harmonica",
  "geopandas",
  "pygmt",
  "shapely",
  "tqdm",
  "verde",
  "ipykernel",
  "plotly",
  "seaborn",
  "pyproj",
  "scooby",
  "nbformat>=4.2.0", # needed for plotly
  "iprogress", # need for progressbars
]

[dependency-groups]
docs = [









  "invert4geom",
  "polartoolkit",
  "boule",
]

[project.urls]
Homepage = "https://github.com/airbornegeo/airbornegeo"
Documentation = "https://airbornegeo.github.io/airbornegeo/"
"Bug Tracker" = "https://github.com/airbornegeo/airbornegeo/issues"
Discussions = "https://github.com/airbornegeo/airbornegeo/discussions"
Changelog = "https://github.com/airbornegeo/airbornegeo/docs/changelog.md"


[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/airbornegeo/_version.py"

[tool.hatch.envs.default]
dependencies = []

[tool.hatch.envs.hatch-test]
dependency-groups = ["test"]
env-vars.PYTHONWARNDEFAULTENCODING = "1"

[tool.hatch.build.targets.sdist]
only-include = ["src"]

[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "--showlocals"]
strict = true
filterwarnings = [
  "error",
  "ignore::SyntaxWarning",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]


[tool.coverage]
run.source = ["airbornegeo"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.12"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "airbornegeo.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true


[tool.ruff]

[tool.ruff.lint]
extend-select = [
  "ARG",      # flake8-unused-arguments
  "B",        # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",       # flake8-comprehensions
  "DTZ",    # flake8-datetimez
  "EM",       # flake8-errmsg
  "EXE",      # flake8-executable
  "FA",     # flake8-future-annotations
  "FLY",    # flynt
  "FURB",   # refurb
  "G",        # flake8-logging-format
  "I",        # isort
  "ICN",    # flake8-import-conventions
  "ISC",    # flake8-implicit-str-concat
  "LOG",    # flake8-logging
  "NPY",    # NumPy specific rules
  "PD",     # pandas-vet
  "PERF",   # perflint
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-use-pathlib
  "PYI",    # flake8-pyi
  "Q",      # flake8-quotes
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  "RUF",    # Ruff-specific
  "SIM",    # flake8-simplify
  "SLOT",   # flake8-slots
  "T10",    # flake8-debugger
  "T20",    # flake8-print
  "TC",     # flake8-type-checking
  "TRY",    # tryceratops
  "UP",     # pyupgrade
  "YTT",    # flake8-2020
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
]
# Uncomment if using a _compat.typing backport
# typing-modules = ["airbornegeo._compat.typing"]


[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"__init__.py" = ["F401"]  # disable unused-imports errors on __init__.py
"*.ipynb" = [
  "T201", # allow print statements
  "E712", # allow == False in pandas subsetting
]


[tool.pylint]
py-version = "3.12"
ignore-paths = ["CHANGELOG.md", ".*\\_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
similarities.min-similarity-lines = 5
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
]

[tool.codespell]
ignore-words-list = ["words-to-ignore"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64"]#, "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
airbornegeo = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.dependencies]
numpy = ">=2.0"
scipy = ">=1.13.0"
matplotlib = ">=3.9.0"
pandas = ">=2.3.0"
scikit-learn = ">=1.5.0"
ipython = ">=8.23.0"
nbformat = ">=4.2.0" # needed for plotly
harmonica = ">=0.7.0,<0.8"
geopandas = ">=1.1.3,<2"
pygmt = ">=0.18.0,<0.19"
shapely = ">=2.1.2,<3"
tqdm = ">=4.67.3,<5"
verde = ">=1.8.1,<2"
ipykernel = ">=7.2.0,<8"
plotly = ">=6.6.0,<7"
seaborn = ">=0.13.2,<0.14"
scooby = ">=0.11.0,<0.12"
iprogress = ">=0.4,<0.5"
pyproj = ">=3.7.2,<4"
polartoolkit = ">=1.5.0,<2"
boule = ">=0.5.0,<0.6"
invert4geom = ">=2"
geographiclib = ">=2.1,<3"

[tool.pixi.feature.test.tasks.test]
cmd = "pytest {{ target }} -ra --cov --cov-report=xml --cov-report=term --durations=20"
args = [{ arg = "target", default = "tests/" }]

[tool.pixi.feature.test.dependencies]
pytest = ">=9"
pytest-cov = ">=7"

[tool.pixi.feature.dev.tasks.format]
cmd = "pre-commit run --all-files"

[tool.pixi.feature.dev.tasks.lint]
cmd = "pylint airbornegeo"

[tool.pixi.feature.dev.tasks.style]
cmd = "pre-commit run --all-files ; pylint airbornegeo"

[tool.pixi.feature.dev.dependencies]
jupyterlab = ">=4.5.6,<5"
pre-commit = ">=4.5.1,<5"
pylint = ">=3.2"

[tool.pixi.feature.docs.tasks.docs]
cmd = "sphinx-autobuild --open-browser -n -T -b=html docs docs/_build/html"

[tool.pixi.feature.docs.tasks.docs_static]
cmd = "sphinx-build --keep-going -n -T -b=html docs docs/_build/html"

[tool.pixi.feature.docs.dependencies]
nbconvert = ">=7.17.0,<8"
sphinx = ">=7.0"
myst-parser = ">=0.13"
sphinx-copybutton = ">=0.5.2,<0.6"
sphinx-autodoc-typehints = ">=3.9.9,<4"
sphinx-book-theme = ">=0.3"
nbsphinx = ">=0.9.8,<0.10"
ipykernel = ">=7.2.0,<8"
sphinxcontrib-bibtex = ">=2.6.5,<3"
sphinx-design = ">=0.7.0,<0.8"
sphinx-autobuild = ">=2025.8.25,<2026"
invert4geom = ">=2.0.1,<3"
polartoolkit = ">=1.5.0,<2"
boule = ">=0.5.0,<0.6"
